Fixed scrollbar click event.

--- a/silsannotate/static/version4/css/main.css
+++ b/silsannotate/static/version4/css/main.css
@@ -192,7 +192,6 @@ p,h1,h2,h3,h4,h5,h6,
   font-size: 11px;
   position:relative;
   top:0;
-  left:0;
 }
 
 #annotation-panel .annotation-pane {
